# demo_contracted_double

./: .gitignore  README.md  requirements.txt
demo_contracted_double/: __init__.py
demo_contracted_double/api1/: __init__.py
demo_contracted_double/api2/: __init__.py
demo_contracted_double/model/: result.py
demo_contracted_double/rust_api/: .gitignore  Cargo.toml
demo_contracted_double/rust_api/src/: main.rs
demo_contracted_double/tests/: api1-api2.json
demo_contracted_double/tests/api1/: test_api1.py
demo_contracted_double/tests/api2/: test_api2.py  test_contract_api1.py
